--- a/plugins/CoreHome/lang/el.json
+++ b/plugins/CoreHome/lang/el.json
@@ -23,7 +23,7 @@
         "EndShortcut": "Τέλος",
         "EnterZenMode": "Εισαγωγή σε κατάσταση Zen (απόκρυψη των μενού)",
         "ExitZenMode": "Έξοδος από κατάσταση Zen (εμφάνιση των μενού)",
-        "ExceptionNotWhitelistedIP": "Δεν μπορείτε να χρησιμοποιήσετε το Matomo καθώς, η διεύθυνση IP σας %s δεν είναι στην λευκή λίστα",
+        "ExceptionNotAllowlistedIP": "Δεν μπορείτε να χρησιμοποιήσετε το Matomo καθώς η διεύθυνση IP σας %s δεν επιτρέπεται.",
         "ExcludeRowsWithLowPopulation": "Προβάλλονται όλες οι εγγραφές %s Εξαίρεση αυτών με μικρό πλήθος",
         "ExternalHelp": "Βοήθεια (ανοίγει σε νέα καρτέλα)",
         "FlattenDataTable": "Η αναφορά είναι ιεραρχημένη %s Κάντε την επίπεδη",
