--- a/plugins/DevicesDetection/lang/zh-cn.json
+++ b/plugins/DevicesDetection/lang/zh-cn.json
@@ -20,6 +20,8 @@
         "dataTableLabelModels": "型号",
         "dataTableLabelSystemVersion": "操作系统版本",
         "dataTableLabelTypes": "类型",
+        "ClientType": "客户类型",
+        "ClientTypes": "客户类型",
         "Device": "设备",
         "DeviceBrand": "设备品牌",
         "DeviceBrands": "设备品牌",
@@ -47,7 +49,10 @@
         "Phablet": "平板手机",
         "TV": "TV",
         "UserAgent": "用户代理（User-Agent）",
+        "FeedReader": "提要阅读器",
         "MobileApp": "移动应用程序",
+        "Pim": "PIM",
+        "MediaPlayer": "媒体播放器",
         "XVisitsFromDevices": "来自%2$s设备的%1$s次访问",
         "Wearable": "适合的",
         "WidgetBrowsers": "访客浏览器",
