--- a/plugins/Diagnostics/lang/zh-cn.json
+++ b/plugins/Diagnostics/lang/zh-cn.json
@@ -9,7 +9,9 @@
         "HideUnchanged": "如果只想看改变的值可以%1$s，隐藏所有为改变的值%2$s。",
         "Sections": "部分",
         "DatabaseReaderConnection": "数据库读取器连接",
+        "DatabaseUtf8Requirement": "为了能够存储4字节UTF8字符，这是必需的。 除非utf8mb4可用，否则特殊字符（例如表情符号，亚洲语言的较不常用字符），各种历史性脚本或数学符号将替换为%1$s。您可以在FAQ%3$s中的%2$s中阅读有关此主题的更多详细信息。",
         "DatabaseUtf8mb4CharsetRecommended": "你的数据库不支持 utf8mb4 字符集。",
+        "DatabaseUtf8mb4CharsetAvailableButNotUsed": "您的数据库支持utf8mb4字符集，但是您的数据库表尚未转换。 您可以通过执行命令%1$s或在“常规设置”中激活自动转换来执行此操作。",
         "CronArchivingLastRunCheck": "上次成功完成归档",
         "CronArchivingHasNotRun": "存档尚未成功运行。",
         "CronArchivingHasNotRunInAWhile": "归档最后一次在%1$s上成功运行，这是%2$s之前。",
