--- a/plugins/Login/lang/zh-cn.json
+++ b/plugins/Login/lang/zh-cn.json
@@ -16,10 +16,14 @@
         "SettingBruteForceEnableHelp": "暴力检测是一项重要的安全功能，用于保护您的数据免遭未经授权的访问。 与其允许任何用户在很短的时间内尝试成千上万的密码组合，不如在短时间内仅允许特定数量的失败登录。 如果在该时间段内发生太多失败的登录，则用户将需要一段时间才能登录。 请注意，如果某个IP被阻止，则使用该IP的每个用户也将被阻止登录。",
         "SettingBruteForceWhitelistIp": "切勿阻止这些IP登录",
         "SettingBruteForceBlacklistIp": "始终阻止这些IP登录",
+        "NotAllowListTakesPrecendence": "如果IP与阻止列表和从不阻止列表都匹配，则阻止列表将占优，并且IP将不被允许。",
         "SettingBruteForceMaxFailedLogins": "时间范围内允许的重试登录次数",
         "SettingBruteForceMaxFailedLoginsHelp": "如果在下面配置的时间范围内记录的登录失败次数超过此数目，请阻止IP。",
         "SettingBruteForceTimeRange": "以分钟为单位计算此时间范围内的登录重试次数",
         "SettingBruteForceTimeRangeHelp": "以分钟为单位输入数字。",
+        "ConfirmPasswordReset": "确认密码重置",
+        "ConfirmPasswordResetIntro": "要确认确实是您要求更改密码，请再次输入新密码。",
+        "ConfirmPasswordResetWrongPassword": "输入的密码与您的新密码不匹配。 如果您忘记了新选择的密码，可以再次重置密码。 如果您不要求更改密码，只需不执行任何操作，密码就不会更改。",
         "LoginNotAllowedBecauseBlocked": "由于登录失败过多，当前不允许您登录，请稍后再试。",
         "CurrentlyBlockedIPs": "目前封锁的IP",
         "IPsAlwaysBlocked": "这些IP始终被阻止",
