--- a/plugins/PrivacyManager/lang/el.json
+++ b/plugins/PrivacyManager/lang/el.json
@@ -6,6 +6,8 @@
         "AnonymizeIpExtendedHelp": "Όταν οι χρήστες επισκέπτονται τον ιστοτόπο σας, το Matomo δε θα χρησιμοποιήσει την πλήρη διεύθυνση IP (όπως %1$s), αλλά αντίθετα θα κάνει τη διεύθυνση ανωνυμοποιημένη (σε %2$s). Η ανωνυμοποίηση των διευθύνσεων IP είναι μία από τις απαιτήσεις που ορίζει η νομοθεσία για την ιδιωτικότητα σε ορισμένες χώρες όπως η Γερμανία.",
         "AnonymizeIpMaskLengtDescription": "Επιλέξτε πόσα bytes από τις διευθύνσεις IP των επισκεπτών πρέπει να κρύβονται.",
         "AnonymizeIpMaskLength": "%1$s byte - πχ. %2$s",
+        "AnonymizeReferrer": "Ανωνυμοποίηση Αναφορέα",
+        "AnonymizeReferrerNote": "Το Matomo αποθηκεύει τη διεύθυνση URL (αναφορέας) από την οποία ήρθε ένα χρήστης στον ιστοτόπο σας. Σε ορισμένες περιπτώσεις, μια τέτοια διεύθυνση URL μπορεί να περιέχει πληροφορίες που ενδέχεται να θεωρηθούν ως προσωπικές. Αν θέλετε να αποτρέψετε αυτές τις πληροφορίες να ιχνηλατούνται, μπορείτε να περιορίσετε τον όγκο της πληροφορίας αναφορέα που θα αποθηκεύει το Matomo όταν ένας χρήστης επισκέπτεται τον ιστοτόπο σας. Όσο περισσότερες πληροφορίες αφαιρούνται από τις πληροφορίες αναφορέα, τόσο πιο πιθανό είναι να καταγράφονται λιγότερες προσωπικές πληροφορίες. Όσο περισσότερες πληροφορίες αφαιρείτε από τον αναφορέα, τόσο λιγότερο ξεκάθαρο θα είναι πως ο επισκέπτης ήρθε στον ιστοτόπο σας.",
         "AskingForConsent": "Ερώτημα για συναίνεση",
         "ConsentExplanation": "Η συναίνεση σημαίνει την παροχή διαφορετικών επιλογών και τον έλεγχο του πως γίνεται η επεξεργασία των προσωπικών τους δεδομένων.",
         "ClickHereSettings": "Πατήστε εδώ για να έχετε πρόσβαση στις ρυθμίσεις %s.",
@@ -17,6 +19,10 @@
         "AnonymizeSites": "Ανωνυμοποίηση των δεδομένων για τον ιστοτόπο",
         "AnonymizeRowDataFrom": "Ανωνυμοποίηση όλων των ανεπεξέργαστων δεδομένων αρχίζοντας από:",
         "AnonymizeRowDataTo": "Ανωνυμοποίηση όλων των ανεπεξέργαστων δεδομένων μέχρι:",
+        "AnonymizeReferrerExcludeNone": "Να μην γίνεται ανωνυμοποίηση του αναφορέα",
+        "AnonymizeReferrerExcludeQuery": "Να αφαιρούνται οι παράμετροι από τη διεύθυνση URL του αναφορέα",
+        "AnonymizeReferrerExcludePath": "Να κρατείται μόνο το όνομα χώρου από την διεύθυνση URL του αναφορέα",
+        "AnonymizeReferrerExcludeAll": "Να μη γίνεται καταγραφή της διεύθυνσης URL του αναφορέα, ωστόσο να εντοπίζεται ο τύπος του",
         "AnonymizeIp": "Ανωνυμοποίηση διευθύνσεων IP",
         "AnonymizeIpHelp": "Η ενέργεια είναι μη αναστρέψιμη. Αν ενεργοποιηθεί, για όλες τις επισκέψεις σε αυτή τη διάρκεια η διεύθυνση IP θα ανωνυμοποιείται για τουλάχιστον 2 bytes, για παράδειγμα '192.168.xxx.xxx'. Αν έχετε ρυθμίσει την ανωνυμοποίηση στα 3 bytes, τότε η ρύθμιση θα λαμβάνεται υπόψη και όλες οι διευθύνσεις IP θα ανωνυμοποιούνται για 3 bytes.",
         "AnonymizeLocation": "Ανωνυμοποίηση Τοποθεσίας",
@@ -60,6 +66,7 @@
         "DeleteReportsConfirm": "Πρόκειται να ενεργοποιήσετε τη διαγραφή δεδομένων αναφορών. Αν οι παλαιές αναφορές απομακρυνθούν, θα πρέπει να τις ξαναδημιουργήσετε ώστε να τις δείτε. Θέλετε, σίγουρα, να συνεχίσετε;",
         "DeleteAggregateReportsDetailedInfo": "Όταν ενεργοποιείτε αυτή τη ρύθμιση, όλες οι συγκεντρωτικές αναφορές θα διαγραφούν. Οι συγκεντρωτικές αναφορές δημιουργούνται από τα ανεπεξέργαστα δεδομένα και αντιπροσωπεύουν τα συγκεντρωτικά δεδομένα για τις διάφορες επισκέψεις. Για παράδειγμα, η αναφορά \"Χώρα\" εμφανίζει συγκεντρωτικούς αριθμούς για να δείτε πόσες επισκέψεις έγιναν από κάθε χώρα.",
         "KeepBasicMetricsReportsDetailedInfo": "Όταν ενεργοποιήσετε αυτή τη ρύθμιση, ορισμένοι αριθμητικοί δείκτες απόδοσης δε θα διαγραφούν.",
+        "InfoSomeReferrerInfoMayBeAnonymized": "Ορισμένες πληροφορίες αναφορέα ενδέχεται να λείπουν επειδή έχει ενεργοποιηθεί η ανωνυμοποίηση φορέα ως εξής: %s",
         "DeleteReportsInfo2": "Αν διαγράψετε παλιές αναφορές, ενδέχεται να γίνει επεξεργασία τους και πάλι από τα ανεπεξέργαστα δεδομένα όταν τις ξαναζητήσετε.",
         "DeleteReportsInfo3": "Αν έχετε επίσης ενεργοποιήσει το \"%s\", τα δεδομένα των αναφορών που διαγράφετε θα χαθούν για πάντα.",
         "DeleteReportsOlderThan": "Διαγραφή αναφορών παλαιότερων από",
