--- a/plugins/PrivacyManager/lang/sq.json
+++ b/plugins/PrivacyManager/lang/sq.json
@@ -6,6 +6,8 @@
         "AnonymizeIpExtendedHelp": "Kur përdoruesit vizitojnë sajtin tuaj, Piwik-u s’do të përdorë adresën e plotë IP (të tillë si %1$s), por, në vend të kësaj, Matomo-u së pari do ta anonimizojë (si %2$s). Anonimizimi i adresave IP është një nga domosdoshmëritë e vendosura nga ligjet mbi privatësinë në disa vende, si Gjermania, fjala vjen.",
         "AnonymizeIpMaskLengtDescription": "Përzgjidhni sa bajte të maskohen te IP-ja e vizitorit.",
         "AnonymizeIpMaskLength": "%1$s bajt(e) - p.sh. %2$s",
+        "AnonymizeReferrer": "Anonimizo Referues",
+        "AnonymizeReferrerNote": "Matomo-ja depoziton prej cilave URL (referues) vjen në sajtin tuaj një përdorues. Në disa raste, një URL e tillë mund të përmbajë informacion që mund të konsiderohet informacion personal. Nëse doni të pengoni ndjekjen e informacioneve të tilla, mund të kufizoni sasinë e të dhënave mbi referuesin që do të depozitojë Matomo-ja, kur një vizitor hyn në sajtin tuaj. Sa më tepër informacion që të hiqet prej të dhënave mbi referuesin, aq më pak të dhëna personale do të regjistrohen. Sa më tepër informacion që hiqni prej referuesit, aq më pak e qartë do të bëhet njohja se si erdhi një vizitor në sajtin tuaj.",
         "AskingForConsent": "Kërkim pranimi",
         "ConsentExplanation": "Pranim do të thotë t’u ofrohet individëve zgjedhje dhe kontroll rreth se si përpunohen të dhënat e tyre personale.",
         "ClickHereSettings": "Klikoni këtu që të shkoni te rregullimet mbi %s.",
@@ -17,6 +19,10 @@
         "AnonymizeSites": "Anonimizo të dhënat e këtij sajti(eve)",
         "AnonymizeRowDataFrom": "Anonimizo krejt të dhënat e papërpunuara duke filluar nga:",
         "AnonymizeRowDataTo": "Anonimizo krejt të dhënat e papërpunuara deri më:",
+        "AnonymizeReferrerExcludeNone": "Mos e anonimizo referuesin",
+        "AnonymizeReferrerExcludeQuery": "Hiq prej URL-së së referuesit parametra kërkese",
+        "AnonymizeReferrerExcludePath": "Mbaj vetëm përkatësinë e një URL-je referuesi",
+        "AnonymizeReferrerExcludeAll": "Mos e regjistro URL-në e referuesit, por pikas prapëseprapë llojin e referuesit",
         "AnonymizeIp": "Anonimizo IP",
         "AnonymizeIpHelp": "Ky veprim s’mund të zhbëhet. Në u aktivizoftë, për krejt vizitat gjatë kohëzgjatjes, IP-ja do të anonimizohet të paktën me 2 bajte, për shembull '192.168.xxx.xxx'. Nëse keni formësuar të anonimizohen 3 bajte, atëherë ky rregullim do të respektohet dhe krejt IP-të do të anonimizohen me 3 bajte.",
         "AnonymizeLocation": "Anonimizo Vendndodhje",
@@ -56,6 +62,7 @@
         "DeleteReportsConfirm": "Ju ndan një hap nga aktivizimi i fshirjes së të dhënave të raporteve. Nëse hiqen raportet e vjetër, do t’ju duhet t’i ripërpunoni ata, pa të mund t’i shihni. Jeni i sigurt se doni të bëhet kjo?",
         "DeleteAggregateReportsDetailedInfo": "Kur e aktivizoni këtë rregullim, do të fshihen krejt raportet e krijuar. Raportet e krijuar prodhohen nga të dhëna të papërpunuara prej shumë vizitash individuale. Për shembull, raporti \"Vend\" radhit numra përmbledhës për të parë se sa vizita keni pasur prej secilit vend.",
         "KeepBasicMetricsReportsDetailedInfo": "Kur e aktivizoni këtë rregullim, disa tregues kyç numerikë mbi funksionimin e sajtit nuk do të fshihen.",
+        "InfoSomeReferrerInfoMayBeAnonymized": "Disa të dhëna mbi referuesin mund të mungojnë, ngaqë anonizimi i referuesve është i aktivizuar si vijon: %s",
         "DeleteReportsInfo2": "Nëse fshini raporte të vjetër, ata mund të rikrijohen përmes të dhënave të PAPËRPUNUARA, kur ta kërkoni këtë.",
         "DeleteReportsInfo3": "Nëse keni aktivizuar edhe \"%s\", atëherë të dhënat e raporteve që po fshini, do të humbin përgjithnjë.",
         "DeleteReportsOlderThan": "Fshi raporte më të vjetër se",
