--- a/plugins/ScheduledReports/lang/el.json
+++ b/plugins/ScheduledReports/lang/el.json
@@ -38,6 +38,7 @@
         "Segment_Deletion_Error": "Δεν είναι δυνατό να διαγραφεί το τμήμα ή να γίνει αόρατο σε άλλους χρήστες επειδή χρησιμοποιείται για τη δημιουργία των αναφορών ηλ. ταχυδρομείου %s. Παρακαλούμε δοκιμάστε πάλι αφού αφαιρέσετε το τμήμα αυτό από την αναφορά.",
         "Segment_Help": "Μπορείτε να επιλέξετε κάποιο υπάρχον προσαρμοσμένο τμήμα που θα εφαρμοστεί στα δεδομένα σε αυτή την αναφορά e-mail. Μπορείτε να δημιουργήσετε ή τροποποιήσετε προσαρμοσμένα τμήματα στον πίνακα ελέγχου σας %1$s(κάντε κλικ για άνοιγμα)%2$s, μετά κλικ στο πλήκτρο \"%3$s\" και μετά \"%4$s\".",
         "SegmentAppliedToReports": "Το τμήμα '%s' εφαρμόζεται στις αναφορές.",
+        "SegmentDeleted": "Το τμήμα διαγράφηκε",
         "SendReportNow": "Αποστολή Αναφοράς τώρα",
         "SendReportTo": "Αποστολή αναφοράς σε",
         "SentToMe": "Αποστολή σε μένα",
