--- a/plugins/SitesManager/lang/zh-cn.json
+++ b/plugins/SitesManager/lang/zh-cn.json
@@ -25,6 +25,7 @@
         "ExcludedIps": "排除 IP",
         "ExcludedParameters": "排除参数",
         "ExcludedUserAgents": "排除这些用户代理",
+        "Format_Utc": "世界标准时间%s",
         "GlobalExcludedUserAgentHelp1": "输入不要加入Matomo统计的用户代理列表。",
         "GlobalExcludedUserAgentHelp2": "您可以用它排除统计机器人。",
         "GlobalListExcludedIps": "排除的IP地址",
@@ -37,6 +38,7 @@
         "InstallationGuidesIntro": "我们提供逐步指南，说明如何嵌入跟踪代码到一些流行的CMS和网站生成器：",
         "ExtraInformationNeeded": "要在系统上设置Matomo，您可能需要以下信息：",
         "Integrations": "集成",
+        "HelpExcludedIpAddresses": "输入您要排除在Matomo之外的IP列表（每行一个）。 您可以使用CIDR表示法，例如%1$s，也可以使用通配符，例如%2$s或%3$s",
         "JsTrackingTagHelp": "这是要加入所有网页的 JavaScript 跟踪代码",
         "KeepURLFragments": "网址标签跟踪",
         "KeepURLFragmentsHelp": "如果没有选中下面的复选框，网址标签 (%1$s 后面的所有内容) 将被删除: %2$s 将统计为 %3$s",
@@ -46,6 +48,7 @@
         "ListOfQueryParametersToBeExcludedOnAllWebsites": "以下的网址查询参数将会被所有网站忽略。",
         "ListOfQueryParametersToExclude": "请输入URL查询参数的列表，一行一个，这些URL将被排除在页面报告之外。像%s的正则表达式也是支持的。",
         "LogAnalytics": "日志分析",
+        "LogAnalyticsDescription": "如果无法使用Javascript跟踪方法，则可以%1$s使用服务器日志分析%2$s作为跟踪网站用户的另一种方法。",
         "MainDescription": "使用网站分析报表功能，必须有网站！在这里添加、修改、删除网站，或者显示需要加入页面代码里的 Javascript 跟踪代码。",
         "MenuManage": "管理",
         "MobileAppsAndSDKs": "移动app和SDK",
@@ -73,19 +76,28 @@
         "SiteSearchUse": "可以用 Matomo 跟踪统计访客站内搜索的内容。",
         "SiteWithoutDataTitle": "尚未记录数据，请在下面设置",
         "SiteWithoutDataDescription": "这个站点没有跟踪到分析数据。",
+        "SiteWithoutDataSetupTracking": "如果尚未完成，请在您的网站或移动应用中设置下面的%1$s个跟踪代码%2$s。",
+        "SiteWithoutDataMessageDisappears": "跟踪此网站的某些数据后，此消息将消失。",
+        "SiteWithoutDataIgnoreMessage": "下一个小时不显示此消息",
+        "SuperUserAccessCan": "具有超级用户访问权限的用户还可以%1$s为新网站指定全局设置%2$s。",
         "Timezone": "时区",
         "TrackingSiteSearch": "跟踪站内搜索",
         "TrackingTags": "%s 的跟踪代码",
         "Urls": "网址",
         "Type": "类型",
         "UTCTimeIs": "UTC 时间是 %s.",
+        "OnlyMatchedUrlsAllowed": "仅当操作网址以上述网址之一开头时，才跟踪访问和操作。",
+        "OnlyMatchedUrlsAllowedHelp": "启用后，Matomo将仅在“页面URL”是您网站的已知URL之一时跟踪内部操作。 这样可以防止人们使用其他网站的URL向您的分析垃圾邮件。",
+        "OnlyMatchedUrlsAllowedHelpExamples": "域和路径必须完全匹配，并且每个有效子域都必须分别指定。 例如，当已知的URL是“ http:\/\/example.com\/path”和“ http:\/\/good.example.com”时，跟踪对“ http:\/\/example.com\/otherpath”或“ http:\/\/bad.example.com”将被忽略。",
         "WebsitesManagement": "网站管理",
         "XManagement": "管理%s",
         "ChooseMeasurableTypeHeadline": "你想衡量什么？",
         "YouCurrentlyHaveAccessToNWebsites": "您现在可以访问 %s 个网站。",
         "YourCurrentIpAddressIs": "您的IP位址是 %s",
         "DeleteSiteExplanation": "删除网站将会删除为其收集的所有日志数据。此操作是永久的，无法撤消。",
+        "EmailInstructionsButton": "通过电子邮件发送这些说明",
         "EmailInstructionsSubject": "Matomo Analytics跟踪代码",
+        "EmailInstructionsDocsPlainText": "如果您要做的不仅仅是跟踪页面浏览量，请查阅%1$s的Matomo文档。",
         "EmailInstructionsGenerateTrackingCode": "您也可以生成一段定制的跟踪代码在%1$s",
         "EmailInstructionsSiteDetailsHeading": "您的站点详情",
         "EmailInstructionsSiteDetails": "您可能需要这些详细信息使用API或SDK来跟踪Matomo访问。",
