--- a/plugins/VisitTime/lang/zh-cn.json
+++ b/plugins/VisitTime/lang/zh-cn.json
@@ -5,8 +5,19 @@
         "ColumnLocalMinute": "当地时间-分钟（访问开始）",
         "ColumnServerTime": "服务器时间",
         "ColumnServerHour": "服务器时间-小时",
+        "ColumnVisitEndServerHour": "服务器时间-小时（上次操作时间）",
+        "ColumnVisitEndServerMinute": "服务器时间-分钟（上次操作时间）",
         "ColumnVisitStartServerHour": "服务器时间-小时（访问开始）",
         "ColumnVisitStartServerMinute": "服务器时间-分钟（访问开始）",
+        "ColumnVisitEndServerDate": "服务器时间-日期（上次操作时间）",
+        "ColumnVisitEndServerDayOfMonth": "服务器时间-一个月中的某天（上次操作的时间）",
+        "ColumnVisitEndServerDayOfWeek": "服务器时间-星期几（上次操作时间）",
+        "ColumnVisitEndServerDayOfYear": "服务器时间-一年中的某天（上次操作的时间）",
+        "ColumnVisitEndServerQuarter": "服务器时间-季度（上次操作时间）",
+        "ColumnVisitEndServerSecond": "服务器时间-秒（上次操作时间）",
+        "ColumnVisitEndServerWeekOfYear": "服务器时间-一年中的星期（上次操作时间）",
+        "ColumnVisitEndServerMonth": "服务器时间-月（上次操作时间）",
+        "ColumnVisitEndServerYear": "服务器时间-年（上次操作时间）",
         "ColumnServerMinute": "服务器时间-分钟",
         "DayOfWeek": "星期几的",
         "LocalTime": "日报表",
