--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -15,7 +15,7 @@
         "API": "API",
         "Apply": "应用",
         "ArchivingInlineHelp": "对于中高流量的网站，建议禁用Matomo浏览器触发归档。最好是设置定时任务，每小时处理一次Matomo报表。",
-        "ArchivingTriggerDescription": "适合大型的Matomo安装，需要%1$s设置定时任务（cron job） %2$s来自动处理报表。",
+        "ArchivingTriggerDescription": "建议用于较大的Matomo安装，您需要%1$s设置cron作业%2$s才能自动处理报告。",
         "AuthenticationMethodSmtp": "SMTP 验证方法",
         "AverageOrderValue": "平均订单额",
         "AveragePrice": "平均价格",
@@ -594,7 +594,7 @@
         "ValidateSslCertificate": "验证SSL证书",
         "VerifyLoginData": "确认用户名和密码正确。",
         "YouAreOffline": "抱歉，您目前离线状态",
-        "ExceptionNoViewAccess": "请检查你的用户名与密码，并确保你至少有一个网站%s的权限",
+        "ExceptionNoViewAccess": "请检查您的用户名和密码，并确保您对至少一个网站具有%s个访问权限。",
         "Mobile_HowtoExitAndroid": "再次点击返回键以退出",
         "MatomoMarketplace": "Matomo 应用市场",
         "EnterAuthCode": "输入二次登录认证验证码",
