--- a/plugins/CorePluginsAdmin/lang/zh-tw.json
+++ b/plugins/CorePluginsAdmin/lang/zh-tw.json
@@ -63,11 +63,18 @@
         "TagManagerEmailSuperUserToActivate": "寄信給超級使用者以啟用此新功能",
         "TagManagerTeaserHideSuperUser": "不要顯示此頁給所有使用者",
         "TagManagerTeaserHideNonSuperUser": "我沒興趣，不再顯示此頁",
+        "TagManagerTeaserEmailSuperUserBody": "您好，%1$s Matomo標籤管理器現在在Matomo中可用，我很想使用這個新功能。 擁有超級用戶訪問權限後，您可以通過頂部菜單中的標籤管理器頁面激活此功能嗎？%2$s Matomo URL為%3$s。 %4$s謝謝",
         "WhatIsTagManager": "Tag Manager 是什麼？",
         "WhatIsTagManagerDetails1": "類似後台管理系統 (CMS) 予你不需要 HTML\/CSS 知識就能發布網站內容的彈性，標籤管理系統 (TMS) 是為你簡化嵌入第一方和第三方追蹤標籤 (或稱為 snippets 或 pixels) 到網站內的程序的首選應用程式。",
+        "WhatIsTagManagerDetails2": "假設您想查看轉換\/目標，時事通訊註冊，社交小部件，退出彈出窗口和再營銷廣告系列的結果； 曾經是高度技術和費時的過程，現在可以在TMS中輕鬆完成，只需單擊幾下即可實現。",
         "TagManagerLearnMoreInUserGuide": "到 Tag Manager 使用者說明內了解更多",
         "WhyUsingATagManager": "為什麼需要 Tag Manager？",
+        "WhyUsingATagManagerDetails1": "標記管理器使您的生活更輕鬆！ 您不再需要等待開發人員修改網站上的任何第一方或第三方代碼段，因為標籤管理器可為您帶來輕鬆的體驗，使您可以進行這些更改並自行部署網站。",
+        "WhyUsingATagManagerDetails2": "它再方便不過了，它不僅可以讓您更快地將更改引入市場，還可以降低成本。",
+        "WhyUsingATagManagerDetails3": "這使營銷團隊，數字團隊和IT人士保持快樂……這對所有人來說都是雙贏！",
         "AreThereAnyRisks": "有任何風險嗎？",
+        "AreThereAnyRisksDetails1": "激活標籤管理器後，具有管理員訪問權限的用戶將能夠創建自定義HTML標籤，觸發器和變量，從而可以在您的網站上執行JavaScript。 這些自定義模板可能被濫用，例如從您的網站訪問者那裡竊取敏感信息（稱為%1$s XSS %2$s）。",
+        "AreThereAnyRisksDetails2": "激活標籤管理器後，可以在“管理=>常規設置”下禁用這些自定義模板。 或者，您也可以將這些模板的使用限制為僅特定用戶或超級用戶。",
         "Theme": "主題",
         "Themes": "主題",
         "ThemesDescription": "主題可以改變 Matomo 的外觀和界面，並提供嶄新的視覺體驗，讓你享受你的數據報表。",
@@ -76,6 +83,7 @@
         "Version": "版本",
         "ViewAllMarketplacePlugins": "查看市集中的所有外掛",
         "WeCouldNotLoadThePluginAsItHasMissingDependencies": "外掛 %1$s 無法載入，因為它遺失了依賴元件：%2$s",
-        "Websites": "網站"
+        "Websites": "網站",
+        "UpdateSelected": "更新選擇項目"
     }
 }
