--- a/plugins/CoreUpdater/lang/zh-cn.json
+++ b/plugins/CoreUpdater/lang/zh-cn.json
@@ -7,6 +7,7 @@
         "DisablingIncompatiblePlugins": "正在停用不兼容的插件：%s",
         "DownloadingUpdateFromX": "正在从 %s 下载新版本",
         "DownloadX": "下载 %s",
+        "UpdateLog": "更新日志",
         "EmptyDatabaseError": "数据库 %s 是空的。您可能要编辑或移除您的 Matomo 配置文件。",
         "ErrorDIYHelp": "如果您是高级用户，在升级数据库时遇到错误：",
         "ErrorDIYHelp_1": "识别并修复问题根源（例如 memory_limit 或 max_execution_time）",
@@ -92,6 +93,8 @@
         "YourDatabaseIsOutOfDate": "您的 Matomo 数据库版本太旧了，必须先升级才能继续。",
         "ViewVersionChangelog": "查看该版本的更新日志：",
         "ReceiveEmailBecauseIsSuperUser": "您会收到本邮件是源于您是 Matomo %s 的管理员",
-        "ConvertToUtf8mb4": "转换到数据库的UTF8mb4字符集"
+        "ConvertToUtf8mb4": "转换到数据库的UTF8mb4字符集",
+        "TriggerDatabaseConversion": "在后台触发数据库转换",
+        "Utf8mb4ConversionHelp": "您的数据库当前未使用utf8mb4字符集。 这样就无法存储4字节字符，例如表情符号，亚洲语言的较不常见字符，各种历史脚本或数学符号。 当前已被%1$s替换。<br \/><br \/>您的数据库支持utf8mb4字符集，可以对其进行转换。<br \/><br \/>如果您能够运行控制台命令，我们建议使用以下命令：%2$s<br \/><br \/>或者，您可以在此处启用转换。 然后，它将作为后台的计划任务自动触发。<br \/><br \/>注意：根据数据库的大小，转换数据库可能要花费几个小时。 由于在此过程中可能无法进行跟踪，因此我们建议不要将触发器用于较大的实例。<br \/><br \/>您可以在%3$s常见问题解答%4$s中找到有关此主题的更多信息。"
     }
 }
