--- a/plugins/Ecommerce/lang/zh-tw.json
+++ b/plugins/Ecommerce/lang/zh-tw.json
@@ -5,6 +5,10 @@
         "Order": "訂單",
         "OrderId": "訂單 ID",
         "Orders": "訂單",
+        "ViewedProductCategory": "檢視產品分類",
+        "ViewedProductName": "檢視產品名稱",
+        "ViewedProductPrice": "檢視產品價格",
+        "ViewedProductSKU": "檢視產品庫存量單位",
         "SalesBy": "由 %s 銷售",
         "SalesAdjective": "銷售 %s",
         "NumberOfItems": "購物車中的項目數量",
