--- a/plugins/Live/lang/zh-tw.json
+++ b/plugins/Live/lang/zh-tw.json
@@ -37,6 +37,9 @@
         "TopVisitedPages": "熱門訪問網頁",
         "VisitsLog": "訪客紀錄",
         "QueryMaxExecutionTimeExceeded": "查詢花了太久時間。",
+        "QueryMaxExecutionTimeExceededReasonDateRange": "如果日期間距太長，可能會發生這種問題。請嘗試選擇較小的日期間距。",
+        "QueryMaxExecutionTimeExceededReasonSegment": "如果區隔內沒有任何訪問記錄，可能會發生這種問題。請嘗試修正你選擇的區隔。",
+        "QueryMaxExecutionTimeExceededReasonUnknown": "請再試一次。如果問題頻繁發生，請聯絡系統管理員或是客服。",
         "VisitorLog": "訪客紀錄",
         "VisitorLogDocumentation": "這個表格顯示所選擇的時間範圍中最新的訪問。你可以將滑鼠移過訪問日期查看訪客最後訪問為何時。%1$s如果日期範圍包含今日，你就可以即時查看訪客！%2$s這裡顯示的資料不論是否和多常使用彙整工作排程，永遠是即時的。",
         "VisitorLogNoDataMessagePurged": "看起來資料已經被清除，因為定期清理舊訪客紀錄已啟用而這份報表的日期已經久於 %s 日。超級使用者可以在管理中心 => 隱私中變更這個設定。",
@@ -51,6 +54,7 @@
         "RowActionTooltipTitle": "開啟已區隔的訪客紀錄",
         "SegmentedVisitorLogTitle": "顯示 %1$s 為「%2$s」的訪客紀錄",
         "OnClickPause": "%s 已開始。點擊暫停。",
-        "OnClickStart": "%s 已停止。點擊開始。"
+        "OnClickStart": "%s 已停止。點擊開始。",
+        "ClickToSeeAllContents": "點擊以檢視個別項目的互動與曝光度。"
     }
 }
