--- a/plugins/MobileMessaging/lang/zh-cn.json
+++ b/plugins/MobileMessaging/lang/zh-cn.json
@@ -9,18 +9,26 @@
         "PluginDescription": "创建并下载自定义短信报表，每天、每周或每月发到您的手机。",
         "Settings_APIKey": "API Key",
         "Settings_CountryCode": "国家代码",
+        "Settings_SelectCountry": "选择国家",
         "Settings_CredentialNotProvided": "请设置上面的 Matomo 短信帐号，然后才能创建和管理电话号码。",
         "Settings_CredentialNotProvidedByAdmin": "请联系管理员设置 Matomo 短信帐号后，才能创建和管理电话号码。",
         "Settings_CredentialProvided": "您的 %s 短信 API 帐号已设定!",
+        "Settings_CredentialInvalid": "您的 %1$s SMS API帐户已配置，但在尝试接收可用信用额度时发生错误。",
         "Settings_DeleteAccountConfirm": "您确定想要删除这个短信账号吗？",
+        "Settings_DelegatedSmsProviderOnlyAppliesToYou": "配置的SMS提供程序将仅由您使用，而不会由任何其他用户使用。",
+        "Settings_DelegatedPhoneNumbersOnlyUsedByYou": "配置的电话号码只能由您查看和使用，而其他任何用户都不能查看和使用。",
+        "Settings_EnterActivationCode": "输入激活码",
         "Settings_InvalidActivationCode": "号码输入无效，请重试。",
         "Settings_LetUsersManageAPICredential": "允许用户管理自己的短信 API 帐号",
         "Settings_LetUsersManageAPICredential_No_Help": "所有用户都能用您的帐号接收短信报表。",
+        "Settings_LetUsersManageAPICredential_Yes_Help": "每个用户将能够建立自己的短信API帐户，并不会使用你的信用。",
         "Settings_ManagePhoneNumbers": "管理电话号码",
         "Settings_PhoneActivated": "电话号码已验证! 您可以收到统计短信了。",
         "Settings_PhoneNumber": "电话号码",
         "Settings_PhoneNumbers_Add": "增加新的电话号码",
+        "Settings_PhoneNumbers_CountryCode_Help": "如果您不知道电话的国家\/地区代码，请在此处查找您的国家\/地区。",
         "Settings_PhoneNumbers_Help": "在手机上接收短信报表前，需要在下面输入电话号码。",
+        "Settings_PhoneNumbers_HelpAdd": "当您单击“添加”时，手机将收到包含代码的短信息。收到代码的用户应该登录到Matomo，单击“设置”，然后单击“移动消息”。输入代码后，用户将能够在手机上接收文本报告。",
         "Settings_PleaseSignUp": "要创建短信报表并在手机上通过短信接收网站的统计信息，请注册短信 API 并在下面输入资料。",
         "Settings_SMSAPIAccount": "管理短信 API 帐户",
         "Settings_SMSProvider": "短信服务商",
@@ -28,10 +36,13 @@
         "Settings_SuspiciousPhoneNumber": "如果没有收到短信，试试前面不要 0。例如. %s",
         "Settings_UpdateOrDeleteAccount": "您也可以 %1$s修改%2$s 或 %3$s删除%4$s 这个帐号。",
         "Settings_ValidatePhoneNumber": "有效",
+        "Settings_VerificationCodeJustSent": "我们刚刚给这个号码发了一条短信，上面有一个代码：请在上面输入这个代码，然后单击“验证”。",
         "SettingsMenu": "手机短信",
         "SMS_Content_Too_Long": "[太长]",
+        "Available_Credits": "可用学分：%1$s",
         "TopLinkTooltip": "设置网站分析报表发送到邮箱或者手机!",
         "TopMenu": "邮件和短信报表",
+        "UserKey": "用户密钥",
         "VerificationText": "代码为 %1$s。要验证电话号码及接收 Matomo 短信报表，请复制本代码到 Matomo > %2$s > %3$s 的表格中。"
     }
 }
