--- a/plugins/Widgetize/lang/zh-cn.json
+++ b/plugins/Widgetize/lang/zh-cn.json
@@ -2,6 +2,7 @@
     "Widgetize": {
         "OpenInNewWindow": "打开一个新窗口",
         "PluginDescription": "在你的网站显示Matomo报告或者嵌入HTML标签中在app中显示",
+        "ViewAccessRequired": "该用户至少具有某些写访问权限。 只能使用仅具有查看权限的用户的令牌。",
         "TopLinkTooltip": "小工具形式导出 Matomo 报表，将面板以 iframe 形式嵌入你的app中。"
     }
 }
