--- a/plugins/Installation/lang/en.json
+++ b/plugins/Installation/lang/en.json
@@ -95,7 +95,7 @@
         "SystemCheckGzuncompressHelp": "You need to enable the zlib extension and gzuncompress function.",
         "SystemCheckHashHelp": "You need to configure and rebuild PHP with hash() support enabled by excluding the option --disable-hash.",
         "SystemCheckIconvHelp": "You need to configure and rebuild PHP with \"iconv\" support enabled, --with-iconv.",
-        "SystemCheckJsonHelp": "The php5-json extension is required for Matomo to read and write JSON data.",
+        "SystemCheckJsonHelp": "The php-json extension is required for Matomo to read and write JSON data.",
         "SystemCheckMailHelp": "Feedback and Lost Password messages will not be sent without mail().",
         "SystemCheckMbstring": "mbstring",
         "SystemCheckMbstringHelp": "The mbstring extension is required to handle multibyte characters in the User interface and API responses. Also, please check that mbstring.func_overload is set to \"0\" in php.ini.",
