--- a/plugins/DevicesDetection/lang/zh-cn.json
+++ b/plugins/DevicesDetection/lang/zh-cn.json
@@ -49,6 +49,7 @@
         "Phablet": "平板手机",
         "TV": "TV",
         "UserAgent": "用户代理（User-Agent）",
+        "Library": "库",
         "FeedReader": "提要阅读器",
         "MobileApp": "移动应用程序",
         "Pim": "PIM",
