--- a/plugins/PrivacyManager/lang/el.json
+++ b/plugins/PrivacyManager/lang/el.json
@@ -6,6 +6,7 @@
         "AnonymizeIpExtendedHelp": "Όταν οι χρήστες επισκέπτονται τον ιστοτόπο σας, το Matomo δε θα χρησιμοποιήσει την πλήρη διεύθυνση IP (όπως %1$s), αλλά αντίθετα θα κάνει τη διεύθυνση ανωνυμοποιημένη (σε %2$s). Η ανωνυμοποίηση των διευθύνσεων IP είναι μία από τις απαιτήσεις που ορίζει η νομοθεσία για την ιδιωτικότητα σε ορισμένες χώρες όπως η Γερμανία.",
         "AnonymizeIpMaskLengtDescription": "Επιλέξτε πόσα bytes από τις διευθύνσεις IP των επισκεπτών πρέπει να κρύβονται.",
         "AnonymizeIpMaskLength": "%1$s byte - πχ. %2$s",
+        "AnonymizeIpMaskFully": "Πλήρως μασκαρισμένη διεύθυνση IP",
         "AnonymizeReferrer": "Ανωνυμοποίηση Αναφορέα",
         "AnonymizeReferrerNote": "Το Matomo αποθηκεύει τη διεύθυνση URL (αναφορέας) από την οποία ήρθε ένα χρήστης στον ιστοτόπο σας. Σε ορισμένες περιπτώσεις, μια τέτοια διεύθυνση URL μπορεί να περιέχει πληροφορίες που ενδέχεται να θεωρηθούν ως προσωπικές. Αν θέλετε να αποτρέψετε αυτές τις πληροφορίες να ιχνηλατούνται, μπορείτε να περιορίσετε τον όγκο της πληροφορίας αναφορέα που θα αποθηκεύει το Matomo όταν ένας χρήστης επισκέπτεται τον ιστοτόπο σας. Όσο περισσότερες πληροφορίες αφαιρούνται από τις πληροφορίες αναφορέα, τόσο πιο πιθανό είναι να καταγράφονται λιγότερες προσωπικές πληροφορίες. Όσο περισσότερες πληροφορίες αφαιρείτε από τον αναφορέα, τόσο λιγότερο ξεκάθαρο θα είναι πως ο επισκέπτης ήρθε στον ιστοτόπο σας.",
         "AskingForConsent": "Ερώτημα για συναίνεση",
