--- a/plugins/PrivacyManager/lang/zh-cn.json
+++ b/plugins/PrivacyManager/lang/zh-cn.json
@@ -6,6 +6,9 @@
         "AnonymizeIpExtendedHelp": "当用户访问您的网站时，Matomo不会使用完整的IP地址（例如%1$s），而是Matomo首先将其匿名（到%2$s）。 IP地址匿名化是某些国家（例如德国）的隐私法规定的要求之一。",
         "AnonymizeIpMaskLengtDescription": "隐藏的访客IP的字节数",
         "AnonymizeIpMaskLength": "%1$s 字节 - 例如 %2$s",
+        "AnonymizeIpMaskFully": "完全掩码IP地址",
+        "AnonymizeReferrer": "匿名推荐人",
+        "AnonymizeReferrerNote": "Matomo存储用户访问站点的URL（referer）。在某些情况下，这样的URL可能包含可以被视为个人信息的信息。如果您想防止此类信息被跟踪，您可以限制当访问者进入您的网站时Matomo将存储的推荐数据量。从推荐人信息中删除的信息越多，记录个人信息的可能性就越小。你从推荐人那里删除的信息越多，就越不清楚访问者是如何来到你的网站的。",
         "AskingForConsent": "征求同意",
         "ConsentExplanation": "同意意味着向个人提供选择和控制其个人数据处理方式的控制权。",
         "ClickHereSettings": "点这里查看 %s 设置。",
@@ -17,6 +20,10 @@
         "AnonymizeSites": "匿名化此网站的数据",
         "AnonymizeRowDataFrom": "匿名化所有原始数据，始于：",
         "AnonymizeRowDataTo": "匿名化所有原始数据，直到：",
+        "AnonymizeReferrerExcludeNone": "不要匿名推荐人",
+        "AnonymizeReferrerExcludeQuery": "从引用URL中删除查询参数",
+        "AnonymizeReferrerExcludePath": "只保留引用URL的域",
+        "AnonymizeReferrerExcludeAll": "不要记录referer URL，但是仍然检测referer的类型",
         "AnonymizeIp": "匿名IP",
         "AnonymizeIpHelp": "此操作无法撤消。 如果启用，则在此持续时间内的所有访问中，IP地址将被匿名至少2个字节，例如“ 192.168.xxx.xxx”。 如果您当前已配置为以3个字节匿名，则将遵守此设置，并且所有IP将以3个字节匿名。",
         "AnonymizeLocation": "匿名定位",
@@ -60,6 +67,7 @@
         "DeleteReportsConfirm": "您正要启用报表数据删除。如果删除了旧的报表，下次查看前需要重新生成，您确认要这么做吗？",
         "DeleteAggregateReportsDetailedInfo": "启用此设置后，所有汇总的报告都将被删除。 汇总报告是从原始数据生成的，代表了几次单独访问的汇总数据。 例如，“国家\/地区”报告列出了汇总数字，以查看您从每个国家\/地区获得的访问次数。",
         "KeepBasicMetricsReportsDetailedInfo": "启用此设置后，某些数字键性能指标将不会被删除。",
+        "InfoSomeReferrerInfoMayBeAnonymized": "某些推荐人信息可能丢失，因为推荐人匿名功能已启用，如下所示：%s",
         "DeleteReportsInfo2": "如果删除旧报告，则当您请求它们时，可能会再次从RAW数据中对其进行重新处理。",
         "DeleteReportsInfo3": "如果还启用了“%s”，则将删除的报告数据将永久丢失。",
         "DeleteReportsOlderThan": "删除报表超过",
