--- a/plugins/Installation/lang/el.json
+++ b/plugins/Installation/lang/el.json
@@ -95,7 +95,7 @@
         "SystemCheckGzuncompressHelp": "Πρέπει να ενεργοποιήσετε την επέκταση zlib και την συνάρτηση gzuncompress.",
         "SystemCheckHashHelp": "Θα πρέπει να παραμετροποιήσετε και να μεταγλωττίσετε πάλι την PHP με ενεργοποιημένη την υποστήριξη hash() παραλείποντας την επιλογή --disable-hash.",
         "SystemCheckIconvHelp": "Πρέπει να ρυθμίσετε και ξαναεγκαταστήσετε την PHP με ενεργοποιημένη την υποστήριξη «iconv», --with-iconv.",
-        "SystemCheckJsonHelp": "Η επέκταση php5-json απαιτείται προκειμένου το Matomo να διαβάζει και γράφει δεδομένα σε μορφή JSON.",
+        "SystemCheckJsonHelp": "Η επέκταση php-json απαιτείται προκειμένου το Matomo να διαβάζει και να γράφει δεδομένα JSON.",
         "SystemCheckMailHelp": "Τα μηνύματα με τις παρατηρήσεις σας και για τους Ξεχασμένους Κωδικούς δεν θα στέλνονται αν δεν είναι ενεργοποιημένη η συνάρτηση mail().",
         "SystemCheckMbstring": "mbstring",
         "SystemCheckMbstringHelp": "Η επέκταση mbstring απαιτείται για τον χειρισμό χαρακτήρων πολλών Bytes στην διεπαφή χρήστη και στις αποκρίσεις API. Επίσης, βεβαιωθείτε ότι η τιμή mbstring.func_overload έχει οριστεί στο \"0\" στο php.ini.",
