--- a/plugins/Installation/lang/zh-cn.json
+++ b/plugins/Installation/lang/zh-cn.json
@@ -95,7 +95,7 @@
         "SystemCheckGzuncompressHelp": "需要启用 zlib 扩展和 gzuncompress 功能。",
         "SystemCheckHashHelp": "您需要配置禁用 --disable-hash 参数并重新编译 PHP，以启用 hash() 支持。",
         "SystemCheckIconvHelp": "您需要配置使用 --with-iconv 参数并重新编译 PHP，来启用“iconv”支持。",
-        "SystemCheckJsonHelp": "Matomo 需要 php5-json 扩展来读写 JSON 数据。",
+        "SystemCheckJsonHelp": "Matomo需要php-json扩展名才能读取和写入JSON数据。",
         "SystemCheckMailHelp": "若沒有 mail()，意见反馈及忘记密码的信息将无法寄出。",
         "SystemCheckMbstring": "mbstring",
         "SystemCheckMbstringHelp": "需要mbstring扩展来处理用户界面和API响应中的多字节字符。 另外，请检查php.ini中的mbstring.func_overload是否设置为“0”。",
