Adds measuarable settings to disable visits log and visitor profile

--- a/plugins/Live/lang/en.json
+++ b/plugins/Live/lang/en.json
@@ -31,11 +31,13 @@
         "ActionsAndDuration": "%1$s actions in %2$s",
         "SimpleRealTimeWidget_Message": "%1$s and %2$s in the last %3$s",
         "ViewVisitorProfile": "View visitor profile",
+        "EnableVisitorProfile": "Enable visitor profile",
         "VisitedPages": "Visited pages",
         "RevisitedPages": "Pages viewed more than once",
         "ToggleActions": "Toggle visibility of all actions",
         "TopVisitedPages": "Top visited pages",
         "VisitsLog": "Visits Log",
+        "EnableVisitsLog": "Enable visits log",
         "QueryMaxExecutionTimeExceeded": "The query took too long to execute.",
         "QueryMaxExecutionTimeExceededReasonDateRange": "This can happen if the selected date range is too large. Please try to select a smaller date range.",
         "QueryMaxExecutionTimeExceededReasonSegment": "This can happen if the selected segment doesn't match any visit. Please try to check your selected segment.",
