replace visit log with visits log

--- a/plugins/Live/lang/en.json
+++ b/plugins/Live/lang/en.json
@@ -12,7 +12,7 @@
         "LastHours": "Last %s hours",
         "LastMinutes": "Last %s minutes",
         "LastVisit": "Last visit",
-        "LinkVisitorLog": "View detailed visit log",
+        "LinkVisitorLog": "View detailed visits log",
         "LoadMoreVisits": "Load more visits",
         "LimitedSummary": "The information in this profile summarizes the last %1$s visits. This user had more visits in total.",
         "LimitedVisitsShown": "Only the last %1$s visits are shown. This user had more visits in total.",
@@ -53,10 +53,10 @@
         "VisitsFrom": "%1$s%2$s visits%3$s from",
         "VisitSummary": "Spent a total of %1$s%2$s on the website%3$s, and viewed %4$s pages%5$s in %6$s visits%7$s.",
         "VisitSummaryWithActionDetails": "Spent a total of %1$s%2$s on the website%3$s, and performed %4$s actions%5$s (%6$s) in %7$s visits%8$s.",
-        "RowActionTooltipDefault": "Show Visit Log segmented by this row",
-        "RowActionTooltipWithDimension": "Show Visit Log segmented by this %s",
-        "RowActionTooltipTitle": "Open segmented Visit Log",
-        "SegmentedVisitorLogTitle": "Visit Log showing visits where %1$s is \"%2$s\"",
+        "RowActionTooltipDefault": "Show Visits Log segmented by this row",
+        "RowActionTooltipWithDimension": "Show Visits Log segmented by this %s",
+        "RowActionTooltipTitle": "Open segmented Visits Log",
+        "SegmentedVisitorLogTitle": "Visits Log showing visits where %1$s is \"%2$s\"",
         "OnClickPause": "%s is started. Click to pause.",
         "OnClickStart": "%s is stopped. Click to start.",
         "ClickToSeeAllContents": "Click to see each content interaction/impression"
