--- a/plugins/Widgetize/lang/en.json
+++ b/plugins/Widgetize/lang/en.json
@@ -3,6 +3,7 @@
         "OpenInNewWindow": "Open in a new window",
         "PluginDescription": "Display any Matomo report in your website or app with a simple Embed HTML tag.",
         "ViewAccessRequired": "This user has at least some write access. Only tokens of users who have only view access can be used.",
-        "TopLinkTooltip": "Export Matomo Reports as Widgets and embed the Dashboard in your app as an iframe."
+        "TopLinkTooltip": "Export Matomo Reports as Widgets and embed the Dashboard in your app as an iframe.",
+        "TooHighAccessLevel": "This user has too much access for embedding widgets. Please use a user less access."
     }
 }
