Show a warning if tracker file is not writable

--- a/plugins/PrivacyManager/lang/en.json
+++ b/plugins/PrivacyManager/lang/en.json
@@ -84,7 +84,8 @@
         "EstimatedDBSizeAfterPurge": "Estimated database size after purge",
         "EstimatedSpaceSaved": "Estimated space saved",
         "ForceCookielessTracking": "Force tracking without cookies",
-        "ForceCookielessTrackingDescription": "When this option is enabled, Matomo will try to force the tracking to not use any cookies. If matomo.js is writable, it will be updated to ensure disableCookies will be called for all trackers. Additionally Matomo will ignore all tracking cookies on server side.",
+        "ForceCookielessTrackingDescription": "Enabling this option will automatically update %1$s, so it contains some additional code to ensure all trackers won't use cookies. Additionally Matomo will ignore all tracking cookies on server side.",
+        "ForceCookielessTrackingDescriptionNotWritable": "Your %1$s is not writable. Therefor it can't be updated, to ensure cookies won't be used. Please make the file writable or ensure to call disableCookies manually for all javascript trackers. Otherwise Matomo will only ignore all tracking cookies on server side.",
         "GeolocationAnonymizeIpNote": "Note: Geolocation will have approximately the same results with 1 byte anonymized. With 2 bytes or more, Geolocation will be inaccurate.",
         "GDPR": "GDPR",
         "GdprManager": "GDPR Manager",
